# pqc-foundation

./: LICENSE  README.md  pqc95_english_binary.txt  stats.txt
.github/workflows/: pqc-animation.yaml
pqc-wordlist/: README.md  pqc_english_binary.txt  pqc_english_indexed.txt  pqc_english_wordlist.csv  pqc_wordlist.txt  stats.txt
pqc-wordlist/scripts/: checksum.py  verify.py
rust-pqc-wordlist/: Cargo.toml  README.md
rust-pqc-wordlist/src/: lib.rs
scripts/: verify.py
wordlist/: pqc_english_indexed.txt  pqc_wordlist.txt  stats.txt
wordlist/scripts/: checksum.py
